common-lisp-controller (3.88) unstable; urgency=low

  * Don't run the cronjob if we are removed. Closes: #239108 

 -- Peter Van Eynde <pvaneynd@debian.org>  Mon, 22 Mar 2004 14:34:13 +0100

common-lisp-controller (3.87) unstable; urgency=low

  * Add sbcl-mt to known CL implementations (closes:238550)

 -- Kevin M. Rosenberg <kmr@debian.org>  Wed, 17 Mar 2004 10:02:10 -0700

common-lisp-controller (3.86) unstable; urgency=low

  * Add --force-connect to clc-send-command invocation

 -- Kevin M. Rosenberg <kmr@debian.org>  Tue, 16 Mar 2004 10:42:04 -0700

common-lisp-controller (3.85) unstable; urgency=low

  * We don't need to use sudo as we are root anyway. Closes: #231008 

 -- Peter Van Eynde <pvaneynd@debian.org>  Wed,  4 Feb 2004 23:09:19 +0100

common-lisp-controller (3.84) unstable; urgency=medium

  * The spool directory should be world-writable to be any good! 
    This could cause problems for real users and possibly build daemons.

 -- Peter Van Eynde <pvaneynd@debian.org>  Mon,  2 Feb 2004 16:40:31 +0100

common-lisp-controller (3.83) unstable; urgency=low

  * cleanup wrongfully compiled files from previus versions. 

 -- Peter Van Eynde <pvaneynd@debian.org>  Wed, 24 Dec 2003 14:35:00 +0100

common-lisp-controller (3.82) unstable; urgency=high

  * Improved validation of the spool files. Could be a securtity problem I
    guess. 

 -- Peter Van Eynde <pvaneynd@debian.org>  Wed, 24 Dec 2003 10:07:44 +0100

common-lisp-controller (3.81) unstable; urgency=low

  * Reversed order of the tests, so no more 'Looping' messages
    in the cronlog. Closes: #224772
  * Refactoring of the clc-send-command code. Hopefully it still works. 

 -- Peter Van Eynde <pvaneynd@debian.org>  Mon, 22 Dec 2003 12:29:01 +0100

common-lisp-controller (3.80) unstable; urgency=low

  * New feature: when the daemon is not reachable we 
    create a request in a spool directory. Once a day we 
    retry to do all logged requests. As we remove the 
    offender, Closes: #183649